my-third-version

--- a/src/app/users/userlogin/userlogin.component.html
+++ b/src/app/users/userlogin/userlogin.component.html
@@ -10,9 +10,9 @@
         <div class="card rightcard">
             <div>
             </div>
-            <form (submit)="loginUser($event)">
+            <form>
                 <div class="login-box">
-                    <h1>Welcome to Document Verification System!</h1>
+                    <h1>{{headline}}</h1>
                     <div>
                         <input type="text" class="input1" placeholder="Username">
                     </div>
