my-third-version

--- a/src/app/users/usersignup/usersignup.component.html
+++ b/src/app/users/usersignup/usersignup.component.html
@@ -1,6 +1,7 @@
 <!-- Default form register -->
 
 <h1>{{Headline}}</h1>
+<img [src]="srcURL" />
 <form class="text-center border border-light p-5">
 
     <h2>Hi {{ newMember }}!</h2>
