--- a/src/app/users/usersignup/usersignup.component.css
+++ b/src/app/users/usersignup/usersignup.component.css
@@ -30,3 +30,11 @@ button {
     color: white;
     font-weight: bold;
   }
+
+  img {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  height: auto;
+  }
