--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <!--<app-usersignup></app-usersignup>-->
 
-<app-userslist></app-userslist>
+<!--<app-userslist></app-userslist>-->
 
-<!--<app-dashboard></app-dashboard>-->
+<app-dashboard></app-dashboard>
