--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,17 +3,19 @@
     <nav class="navbar navbar-expand-sm">
         <ul class="navbar-nav">
             <li class="">
-                <a span [ngStyle]="{color:colorStyle}" class="nav-link" href="">Active</a>
+                <a span [ngStyle]="{color:colorStyle}" class="nav-link" href=""></a>
             </li>
             <li class="">
-                <a span [ngStyle]="{color:colorStyle}" class="nav-link" href="">Link</a>
+                <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="/userlist">Users Report</a>
             </li>
             <li class="">
-                <a span [ngStyle]="{color:colorStyle}" class="nav-link" href="">Link</a>
+                <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="">Other Reports </a>
             </li>
             <li>
-                <a span [ngStyle]="{color:colorStyle}" class="nav-link" href="">Time</a>
+                <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="/home">Home</a>
             </li>
         </ul>
     </nav>
 </div>
+<br>
+<router-outlet></router-outlet>
