--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
                 <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="/userlist">Users Report</a>
             </li>
             <li class="">
-                <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="">Other Reports </a>
+                <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="/usersignup">New member? </a>
             </li>
             <li>
                 <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="/home">Home</a>
