--- a/src/app/sitenotfound/sitenotfound.component.html
+++ b/src/app/sitenotfound/sitenotfound.component.html
@@ -1,1 +1,17 @@
-<h1>This page does not exist! </h1>
+<main role="main">
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">
+                404 Error Page!
+            </h1>
+            <p class="lead text-muted">
+                The page you are looking for might have been removed or is temporarily unavailable
+            </p>
+            <p>
+                <a href="#" routerLink="/">Go to Homepage</a>
+            </p>
+        </div>
+
+    </section>
+
+</main>
