--- a/src/app/users/usersignup/usersignup.component.css
+++ b/src/app/users/usersignup/usersignup.component.css
@@ -1,3 +1,5 @@
+/************ Previous Form /************/
+
 .formsignup {
     margin-top: 20px;
     margin-left: 220px;
@@ -38,3 +40,6 @@ button {
   width: 10%;
   height: auto;
   }
+  
+
+/************ New Style Form************/
