my-seven-version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 
 <!--<app-userslist></app-userslist>-->
 
-<app-dashboard></app-dashboard>
+<!--<app-dashboard></app-dashboard>-->
 
 
 <!--<sitenotfound></sitenotfound>-->
+<app-newmembers></app-newmembers>
