--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,9 @@
 
 
 <!--<sitenotfound></sitenotfound>-->
-<app-newmembers></app-newmembers>
+<!--<app-newmembers></app-newmembers>-->
+
+<app-file-uploader></app-file-uploader>
+<br>
+<hr>
+<app-file-list></app-file-list>
