my-eighth-version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,17 @@
 <!--<sitenotfound></sitenotfound>-->
 <!--<app-newmembers></app-newmembers>-->
 
-<app-file-uploader></app-file-uploader>
+<!--<app-file-uploader></app-file-uploader>
 <br>
 <hr>
-<app-file-list></app-file-list>
+<app-file-list></app-file-list>-->
+
+
+<div class="card center" style="width: 18rem;">
+    <img class="card-img-top" src="../assets/angular.jpg" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title">Reusable components</h5>
+        <p class="card-text">{{title}}</p>
+        <h4>El código del elemento es: {{elementoid}} </h4>
+    </div>
+</div>
