--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,16 @@
-hr{
+/*hr{
     height: 1px;
 background-color: rgb(3, 40, 121);
 border: none;
-}
+}*/
 
-
-
-
-
-
-
-
-
-
-
+.center {
+    margin: auto;
+    margin-top: 100px;
+    width: 60%;
+    border: 3px solid blue;
+    padding: 10px;
+  }
 
 
 
