--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-loginpage></app-loginpage>
+
 <!--<app-userlogin></app-userlogin>-->
 
 <!--<app-usersignup></app-usersignup>-->
@@ -6,7 +8,6 @@
 
 <!--<app-dashboard></app-dashboard>-->
 
-
 <!--<sitenotfound></sitenotfound>-->
 <!--<app-newmembers></app-newmembers>-->
 
@@ -14,13 +15,4 @@
 <br>
 <hr>
 <app-file-list></app-file-list>-->
-
-
-<div class="card center" style="width: 18rem;">
-    <img class="card-img-top" src="../assets/angular.jpg" alt="Card image cap">
-    <div class="card-body">
-        <h5 class="card-title">Reusable components</h5>
-        <p class="card-text">{{title}}</p>
-        <h4>El código del elemento es: {{elementoid}} </h4>
-    </div>
-</div>
+<link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
