--- a/src/app/users/userlogin/userlogin.component.html
+++ b/src/app/users/userlogin/userlogin.component.html
@@ -1,35 +1,1 @@
-<div class="row">
-    <div class="column">
-        <div class="card leftcard">
-
-            <img src="assets/dvs4.PNG">
-
-        </div>
-    </div>
-    <div class="column">
-        <div class="card rightcard">
-            <div>
-            </div>
-            <form>
-                <div class="login-box">
-                    <h1>{{headline}}</h1>
-                    <div>
-                        <input type="text" class="input1" placeholder="Username">
-                    </div>
-                    <div>
-                        <input type="password" class="input1" placeholder="Password">
-                    </div>
-                    <div class="btn-div rememberdiv">
-                        <input type="checkbox" class="rememberpw" value="lsRememberMe" id="rememberMe"> <label
-                            for="rememberMe">Remember me</label>
-                        <input type="submit" class="forgotpw" value="Forgot password">
-                    </div>
-                    <div class="btn-div">
-                        <input type="submit" class="btn-login action-btn" value="Log in">
-                        <input type="submit" class="btn-signin action-btn" value="Sign Up">
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+<p>it works</p>
