--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<app-loginpage></app-loginpage>
-
 <!--<app-userlogin></app-userlogin>-->
 
 <!--<app-usersignup></app-usersignup>-->
@@ -11,8 +9,8 @@
 <!--<sitenotfound></sitenotfound>-->
 <!--<app-newmembers></app-newmembers>-->
 
-<!--<app-file-uploader></app-file-uploader>
+<app-file-uploader></app-file-uploader>
 <br>
 <hr>
-<app-file-list></app-file-list>-->
-<link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<app-file-list></app-file-list>
+<!--<app-newmembers></app-newmembers>-->
