--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,11 @@
 <!--<sitenotfound></sitenotfound>-->
 <!--<app-newmembers></app-newmembers>-->
 
-<app-file-uploader></app-file-uploader>
+<!--<app-file-uploader></app-file-uploader>
 <br>
 <hr>
-<app-file-list></app-file-list>
+<app-file-list></app-file-list>-->
 <!--<app-newmembers></app-newmembers>-->
+<app-login></app-login>
+<router-outlet></router-outlet>
+<!--<app-user-interface></app-user-interface>-->
