--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 <br>
 <hr>
 <app-file-list></app-file-list>-->
-<!--<app-newmembers></app-newmembers>-->
-<app-login></app-login>
+<!--<<app-newmembers></app-newmembers>-->
+<!--<app-login></app-login>-->
 <router-outlet></router-outlet>
 <!--<app-user-interface></app-user-interface>-->
