--- a/src/app/user-interface/user-interface.component.html
+++ b/src/app/user-interface/user-interface.component.html
@@ -1,22 +1,15 @@
-<div [ngStyle]="navigationStyle">
-    <nav class="navbar navbar-expand-sm">
-        <ul class="navbar-nav">
-            <li>
-                <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="userlogin/userslist">Users
-                    Report</a>
-            </li>
-            <li>
-                <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="userlogin/usersignup">New member?
-                </a>
-            </li>
-            <li>
-                <a span [ngStyle]="{color:colorStyle}" class="nav-link" routerLink="userlogin">Home</a>
-            </li>
-            <li>
-                <button (click)="logout()" color="primary">logout</button>
-            </li>
-        </ul>
-    </nav>
-</div>
-<br>
+<mat-toolbar class="nav">
+    <mat-toolbar-row>
+        <h1>Welcome to DIVS!</h1>
+        <span class="menu-spacer"></span>
+        <div>
+            <a mat-button class="button1" [routerLink]="'/accounts'"> Accounts </a>
+            <a mat-button class="button1" [routerLink]="'/create-account'"> Users Report </a>
+            <a mat-button class="button1" (click)="logout()">Logout </a>
+
+
+        </div>
+    </mat-toolbar-row>
+</mat-toolbar>
+
 <router-outlet></router-outlet>
