--- a/src/app/file-uploader/file-uploader.component.html
+++ b/src/app/file-uploader/file-uploader.component.html
@@ -1,5 +1,4 @@
-<h1>Upload file</h1>
-<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-    <input class="upl" type="file" (change)="onFileChange($event)" />
-    <button type="submit" [disabled]="formGroup.invalid" value="upload">upload</button>
+<form class="upl2" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+    <input class="upl button1" type="file" (change)="onFileChange($event)" />
+    <button class="button1" type="submit" [disabled]="formGroup.invalid" value="upload">upload</button>
 </form>
