--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,5 +31,6 @@
     </mat-card-content>
     <mat-card-actions>
         <button mat-raised-button (click)="login()" color="primary">Login</button>
+        <button mat-raised-button (click)="signUp()" color="primary">SignUp</button>
     </mat-card-actions>
 </mat-card>
