--- a/src/app/newmembers/newmembers.component.html
+++ b/src/app/newmembers/newmembers.component.html
@@ -88,8 +88,10 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-success" [disabled]="!userForm.form.valid">Register</button>
-            <button type="button" class="btn btn-success" (click)="userForm.reset()">Reset</button>
+            <button type="submit" class="button1" [disabled]="!userForm.form.valid">Register</button>
+            <button type="button" class="button1" (click)="userForm.reset()">Reset</button>
+            <button type="button" class="button1" (click)="back()">Back</button>
+
 
 
 
