--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
-<mat-card class="example-card">
+<mat-card class="example-card card1">
     <mat-card-header>
         <mat-card-title>
-            <mat-icon>person</mat-icon>
+            <img src="../../assets/dvs4.PNG" alt="">
             Login
         </mat-card-title>
-
+        <h5>Welcome to the Document Verification System!</h5>
 
     </mat-card-header>
     <mat-card-content>
